# bitrewards_simulation

./: .gitignore  README.md  agents.md  current_project_status.md  pyproject.toml
configs/: baseline.toml  high_funding_share.toml  high_investor_share.toml  low_tracing_accuracy.toml
data/: run_summary.csv  timeseries.csv
data/baseline/: run_summary.csv  timeseries.csv
data/high_funding_share/: run_summary.csv  timeseries.csv
data/high_investor_share/: run_summary.csv  timeseries.csv
data/low_tracing_accuracy/: run_summary.csv  timeseries.csv
data/reference/baseline/: run_summary.csv  timeseries.csv
data/reference/high_funding_share/: run_summary.csv  timeseries.csv
data/reference/high_investor_share/: run_summary.csv  timeseries.csv
data/reference/low_tracing_accuracy/: run_summary.csv  (+1 more)
docs/: README.md  abm_design.md  abm_v2_design.md  data_schema.md  kosmos_brief.md  model.md  running_experiments.md  usage.md  whitepaper_v4.md
experiments/: run_batch.py
scripts/: generate_visualizations.py
src/bitrewards_abm/: run_simulation.py
tests/: test_arrivals_and_frictions.py  test_capital_flows.py  test_data_schema.py  test_disable_churn_flag.py  test_experiment_harness.py  test_graph_royalties_v2.py  test_honor_seal.py  test_investor_caps.py  test_kosmos_reference.py  test_proportional_royalties.py  test_reward_splits.py  test_roi_churn.py  test_satisfaction_churn.py  test_single_path_royalties.py  test_sybil_gating.py  test_token_supply_and_holding.py
visuals/: abm_visuals.py  kosmos_reference.py  story_pack.md  story_pack.py  story_pack_v2.md
(+12 files in other folders)
