[project]
name = "bitrewards-simulation"
version = "0.1.0"
description = "Agent-based simulation of the BITrewards protocol"
authors = [
    {name = "yesthisischris",email = "christopher.valleau@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "mesa (>=3.3.1,<4.0.0)",
    "networkx (>=3.6,<4.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = true
packages = [
    { include = "bitrewards_simulation", from = "src" }
]

[dependency-groups]
dev = [
    "black (>=25.11.0,<26.0.0)",
    "ruff (>=0.14.6,<0.15.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)"
]
